--- a/css/master.css
+++ b/css/master.css
@@ -81,4 +81,12 @@ body {
 	color: #fff;
 }
 
-
+.Saludo {
+	color: #9ef5f6;
+	font-size: 20px;
+	border: 1px solid #9ef5f6;
+	border-radius: 20px;
+	text-align: center;
+	background-color: #000000;
+	font-family: sans-serif;
+}
